# mInf1c-script

./: .buildinfo  .gitignore  .gitmodules  README.md  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js  test.html  test_upython.html
Kapitel/01/: Kit.html  Tools.html  WhyEmbedded.html
Kapitel/02/: state_machine.html
Kapitel/03/: Timer.html  baremetal.html  gpio.html
Kapitel/Exercise/: 01_LED.html  02_ReactionTimer.html  Praktika.html
_sources/: intro.md  notebooks.ipynb  test.ipynb  test_upython.ipynb
_sources/Kapitel/01/: Kit.md  Tools.md  WhyEmbedded.md
_sources/Kapitel/02/: state_machine.md
_sources/Kapitel/03/: Timer.md  baremetal.md  gpio.md
_sources/Kapitel/Exercise/: 01_LED.ipynb
code/: helloworld.py  reaction_game.py
code/ASM/: .gitignore  Makefile  Readme.md  add.s  blink_button.s  toggle_led.s  toggle_led_bug.s  toggle_led_button_polling.s
code/C/: .gitignore
code/C/Ch1/: 1.c  10.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
code/C/Ch2/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  CMakeLists.txt  Readme.md  hal.c  hal.h  startup.c
code/C/Ch2/cmake/: target-mcu.cmake
code/C/Ch3/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  CMakeLists.txt  Readme.md  gpio.c  gpio.h  hal.h  link.ld  startup.c  syscalls.c  timer.c  timer.h  uart.c  uart.h
code/C/Ch3/cmake/: target-mcu.cmake
code/C/Ch3/configs/: stm32g431.svd
code/C/Ch4/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  CMakeLists.txt  Readme.md  board.c  board.h  button.c  button.h  debounce.c  debounce.h  gpio.c  gpio.h  interrupts.c  interrupts.h  led.c  led.h  nvic.c  nvic.h  peripheral.c  peripheral.h  startup.c  systick.c  systick.h  timer.c  timer.h  uart.c  util.h
code/C/Ch4/cmake/: target-mcu.cmake
code/C/Ch5/: Readme.md
code/C/Ch5/libstefi/: CMakeLists.txt
code/C/Ch5/libstefi/cmake/: target-mcu.cmake  toolchain-arm.cmake
code/C/Ch5/libstefi/configs/: link.ld
code/C/Ch5/libstefi/examples/1-Blinky/: CMakeLists.txt  blinky.c  startup.c
code/C/Ch5/libstefi/examples/2-SystickBlinky/: CMakeLists.txt  systickblinky.c
code/C/Ch5/libstefi/include/libstefi/: gpio.h  i2c.h  interrupts.h  peripheral.h  systick.h  timer.h  util.h
code/C/Ch5/libstefi/src/: gpio.c  i2c.c  interrupts.c  peripheral.c  startup.c  systick.c  timer.c  uart.c
code/C/Ch5/libstefi/src/internal/: gpio_internal.h  i2c_internal.h  nvic_internal.h  rcc_internal.h  systick_internal.h  timer_internal.h
code/C/Ch5/libstefi/tests/0-Template/: CMakeLists.txt  minimal.c
code/C/Ch5/libstefi/tests/1-LL_Blinky/: CMakeLists.txt  blinky.c
code/C/Ch5/libstefi/tests/2-Test_Gpio/: CMakeLists.txt  test_gpio.c
code/C/Ch5/libstefi/tests/3-Test_GpioInterrupts/: CMakeLists.txt  test_gpio_interrupts.c
code/C/Ch5/libstefi/tests/4-Test_Timer/: CMakeLists.txt  test_timer.c
code/C/Ch5/libstefi/tests/5-Test_TimerInterrupts/: CMakeLists.txt  test_timer_interrupts.c
code/C/Ch5/libstefi/tests/6-Test_I2C/: CMakeLists.txt  test_i2c.c
code/C/Ch5/libstefi/tests/7-Test_I2C_OLED/: CMakeLists.txt  berry26_32.h  font.h  ssd1306.c  ssd1306.h  test_i2cOLED.c
code/C/Ch5/libstefi/tests/8-Test_PWM/: CMakeLists.txt  test_pwm.c
code/C/Ch6/: CMakeLists.txt
code/C/Ch6/cmake/: target-mcu.cmake
code/C/Ch6/include/libstefi/: gpio.h  systick.h
code/C/Ch6/libstefi/: CMakeLists.txt
code/C/Ch6/libstefi/cmake/: target-mcu.cmake
code/C/Ch6/libstefi/examples/1-Blinky/: CMakeLists.txt  (+1 more)
code/C/Ch6/libstefi/src/: adc.c  gpio.c  i2c.c  peripheral.c  rng.c  spi.c  syscalls.c  timer.c  uart.c
code/C/Ch6/libstefi/tests/: Readme.md
code/C/Ch6/src/: board.c  i2c.c  peripheral.c  util.c
code/C/Ch6/src/internal/: rcc_internal.h  timer_internal.h
code/C/Ch7/: CMakeLists.txt  bl.c
code/C/Ch7/cmake/: toolchain-arm.cmake
code/C/Ch7/libstefi/: CMakeLists.txt
code/C/Ch7/libstefi/boards/: CMakeLists.txt  board.c  board.h
code/C/Ch7/libstefi/cmake/: toolchain-arm.cmake
code/C/Ch7/libstefi/components/actuators/: CMakeLists.txt  l298n.c  l298n.h
code/C/Ch7/libstefi/components/display_oled/: CMakeLists.txt  font.h  ssd1306.c  ssd1306.h
code/C/Ch7/libstefi/components/simple_io/: CMakeLists.txt  board.c  board.h  button.c  button.h  hardware_timer.c  hardware_timer.h  led.c  led.h  pin.c  pin.h
code/C/Ch7/libstefi/configs/: STM32L4x6.svd
code/C/Ch7/libstefi/examples/1-Blinky/: CMakeLists.txt  blinky.c
code/C/Ch7/libstefi/examples/2-Test-Elegoo-SensorKit/: CMakeLists.txt  buzzer.c  encoder.c  line_tracking_sensor.c  microphone.c  motion.c  motion_spi.c  obstacle_avoidance.c  rgbled.c  sensor.c  seven_color_flash.c  touch.c  ultrasound.c
code/C/Ch7/libstefi/examples/3-BitBang/: CMakeLists.txt  bitbang.c
code/C/Ch7/libstefi/examples/4-TestShell/: Checklist.md  testshell.c
code/C/Ch7/libstefi/examples/5-TestModules/: CMakeLists.txt  hl_blink.c
code/C/Ch7/libstefi/examples/6-TestApp/: CMakeLists.txt  reaction_game.c
code/C/Ch7/libstefi/examples/7-L298/: CMakeLists.txt  L298.c
code/C/Ch7/libstefi/include/libstefi/: adc.h  board.h  gpio.h  i2c.h  interrupts.h  peripheral.h  ringbuffer.h  rng.h  spi.h  system.h  systick.h  timer.h  util.h
code/C/Ch7/libstefi/src/: adc.c  gpio.c  i2c.c  interrupts.c  peripheral.c  ringbuffer.c  spi.c  startup.c  system.c  timer.c  uart.c  util.c
code/C/Ch7/libstefi/src/internal/: cortexm4_internal.h  gpio_internal.h  nvic_internal.h  pwr_internal.h  rng_internal.h
code/C/Ch7/libstefi/tests/L4/: CMakeLists.txt  board.h  test.c  test.h  test_main.c  tests_gpio.c
code/C/Ch8/: CMakeLists.txt  movement.c  movement.h  navigation.c  navigation.h  rohmi.c  tracker.c  tracker.h  ultrasonic.c  ultrasonic.h
code/C/examples/: CMakeLists.txt  Readme.md
code/C/examples/Src/: ledon.c  main.c  spiflash.c
code/C/examples/Startup/: startup_stm32l476rgtx.s
es-script/: _config.yml  _toc.yml  intro.md
es-script/Kapitel/01/: Kit.md  Tools.md  WhyEmbedded.md
es-script/Kapitel/02/: state_machine.md
es-script/Kapitel/03/: Timer.md  baremetal.md  gpio.md
es-script/Kapitel/Exercise/: 01_LED.ipynb  02_ReactionTimer.ipynb  Praktika.md
(+50 files in other folders)
